--- a/النهاية.html
+++ b/النهاية.html
@@ -73,6 +73,10 @@
   <div class="score-box" id="team2-score"></div>
 
   <div class="winner" id="winner-text"></div>
+<video id="ending-video" width="640" controls autoplay>
+  <source src="ending.mp4" type="video/mp4">
+  المتصفح لا يدعم عرض الفيديو.
+</video>
 
   <button id="reset-all" onclick="resetFromZero()">إعادة اللعبة من البداية 🔄</button>
   <button id="reset-keep" onclick="resetButKeepUsed()">إعادة لعب جديدة بدون تكرار 🔁</button>
