--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
 
     const allCategories = {
       "إسلامية": ["دين", "قصص الأنبياء", "السيرة النبوية"],
-      "أنمي ومسلسلات": ["ناروتو", "ون بيس", "كونان"],
+      "أنمي ومسلسلات": ["باب الحارة","ناروتو", "ون بيس", "كونان"],
       "🎬 ترفيهي": ["أفلام كرتون زمان", "ذكاء وسرعة بديهة"],
       "🧒 أطفال": ["أسئلة رياض أطفال", "حيوانات", "فواكه وخضار"]
     };
